--- a/style.css
+++ b/style.css
@@ -130,6 +130,10 @@
     opacity: 1;
 }
 
+.h2final, .pfinal {
+    color: #000;
+}
+
 .item .bg::before {
     content: '';
     position: absolute;
@@ -169,6 +173,18 @@
 
 .item:nth-child(7) .bg {
     background: #6A6A90;
+}
+
+.item:nth-child(8) .bg {
+    background: #6F9D6C;
+}
+
+.item:nth-child(9) .bg {
+    background: #00BCD4;
+}
+
+.item:nth-child(10) .bg {
+    background: #fff;
 }
 
 
